// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bold renders with the correct styles 1`] = `
.css-ud99sa,
[data-css-ud99sa] {
  font-weight: 500;
}

<p
  class="css-ud99sa"
/>
`;

exports[`DropdownButton renders with the correct styles 1`] = `
.css-1jj4dtq,
[data-css-1jj4dtq] {
  font-family: Roboto;
  color: #111;
  background-color: #fff;
  border: none;
  letter-spacing: 0.5px;
  transition: all 100ms;
  outline: none;
  height: 45px;
  width: 100%;
  text-align: left;
  font-size: 14px;
  padding-left: 10px;
  font-weight: 500;
  -webkit-transition: all 100ms;
  -moz-transition: all 100ms;
}

.css-1jj4dtq:hover,
[data-css-1jj4dtq]:hover {
  background-color: #00B04D;
  cursor: pointer;
  transition: all 100ms;
  color: #eee;
  -webkit-transition: all 100ms;
  -moz-transition: all 100ms;
}

<button
  class="css-1jj4dtq"
/>
`;

exports[`DropdownContent renders with the correct styles 1`] = `
.css-11efdoa,
[data-css-11efdoa] {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  flex-direction: column;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

<div
  class="css-11efdoa"
/>
`;

exports[`DropdownEmptyItem renders with the correct styles 1`] = `
.css-7gti9o,
[data-css-7gti9o] {
  line-height: 1.4;
  box-sizing: border-box;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding-top: 5px;
  padding-left: 10px;
  flex-direction: column;
  justify-content: center;
  font-size: 14px;
  height: 50px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

<div
  class="css-7gti9o"
/>
`;

exports[`Line renders with the correct styles 1`] = `
.css-1uqg79o,
[data-css-1uqg79o] {
  height: 5px;
  border-bottom: 1px solid #e7e7e7;
}

<div
  class="css-1uqg79o"
/>
`;

exports[`StyledDropdown renders with the correct styles 1`] = `
.css-1fmeida,
[data-css-1fmeida] {
  position: absolute;
  width: 140px;
  height: 100px;
  top: calc(55px + 3px);
  right: 0;
  background-color: #fff;
  border: 1px solid #dddede;
  border-radius: 4px;
  font-family: Oxygen;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  display: none;
}

.css-1fmeida::before,
[data-css-1fmeida]::before {
  content: close-quote;
  position: absolute;
  display: inline-block;
  top: -16px;
  right: 9px;
  left: auto;
  border: 8px solid transparent;
  border-bottom-color: #dddede;
}

.css-1fmeida::after,
[data-css-1fmeida]::after {
  content: close-quote;
  border: 7px solid transparent;
  border-bottom-color: #fff;
  position: absolute;
  display: inline-block;
  top: -14px;
  right: 10px;
  left: auto;
}

<div
  class="css-1fmeida"
/>
`;

exports[`StyledFeedDropdown renders with the correct styles 1`] = `
.css-1w29tut,
[data-css-1w29tut] {
  position: absolute;
  width: 200px;
  height: auto;
  top: 70px;
  right: 10px;
  background-color: #fff;
  border: 1px solid #dddede;
  border-radius: 4px;
  font-family: Oxygen;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  display: none;
  z-index: 2;
}

.css-1w29tut::before,
[data-css-1w29tut]::before {
  content: close-quote;
  position: absolute;
  display: inline-block;
  top: -16px;
  right: 9px;
  left: auto;
  border: 8px solid transparent;
  border-bottom-color: #dddede;
}

.css-1w29tut::after,
[data-css-1w29tut]::after {
  content: close-quote;
  border: 7px solid transparent;
  border-bottom-color: #fff;
  position: absolute;
  display: inline-block;
  top: -14px;
  right: 10px;
  left: auto;
}

<div
  class="css-1w29tut"
/>
`;
